fix inv page overflow

--- a/src/components/dashboard/investment/investmentTable/Table.module.scss
+++ b/src/components/dashboard/investment/investmentTable/Table.module.scss
@@ -1,96 +1,99 @@
 table {
- width: 100%;
- border: none;
- border-collapse: collapse;
- font-family: 'Poppins', sans-serif;
+  width: 100%;
+  border: none;
+  border-collapse: collapse;
+  font-family: "Poppins", sans-serif;
 }
 
 .table {
- border-collapse: collapse;
- width: 151px;
- height: 76px;
- padding: 0 40px;
- background: #120EFB;
- color: #FFF !important;
- text-align: center;
- font-size: 16px;
- font-style: normal;
- font-weight: 700;
- line-height: normal;
-
- @media (max-width: 768px) {
-  width: 40px;
-  font-size: 8px;
-  padding: 0 5px;
- }
-
- tr {
+  border-collapse: collapse;
+  width: 151px;
+  height: 76px;
+  padding: 0 40px;
+  background: #120efb;
   color: #fff !important;
- }
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  @media (max-width: 768px) {
+    width: 40px;
+    font-size: 8px;
+    padding: 0 5px;
+  }
+
+  tr {
+    color: #fff !important;
+  }
 }
 
 #table_data {
- width: 151px;
- height: 100px;
- padding: 0 26px;
- color: rgba(30, 30, 17, 0.93);
- text-align: center;
- font-size: 16px;
- font-style: normal;
- font-weight: 400;
- line-height: normal;
- border: 1px solid rgba(215, 215, 215, 0.50);
+  width: 151px;
+  height: 100px;
+  padding: 0 26px;
+  color: rgba(30, 30, 17, 0.93);
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border: 1px solid rgba(215, 215, 215, 0.5);
 
- @media (max-width: 768px) {
-   width: 40px;
-   font-size: 8px;
-   padding: 0 2px;
-   height: 50px;
+  @media (max-width: 768px) {
+    width: 40px;
+    font-size: 8px;
+    padding: 0 2px;
+    height: 50px;
+  }
+}
+
+.fixed_header_table {
+  margin: 0 auto 50px auto;
+
+  @media (max-width: 768px) {
+    margin: 0 auto 20px auto;
   }
 }
 
 #see_more {
- color: #140460;
- text-align: center;
- font-size: 16px;
- font-style: normal;
- font-weight: 400;
- line-height: normal;
- cursor: pointer;
- margin: 0 0 0 780px;
- font-family: 'Poppins', sans-serif;
+  color: #140460;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  min-width: 20px;
+  margin-left: auto;
+  float: right;
+  margin-bottom: 20px;
 
- @media (max-width: 768px) {
-  margin: 0 0 0 280px;
-  font-size: 10px;
- }
-}
-
-.fixed_header_table {
- margin: 0 auto 50px auto;
-
- @media (max-width: 768px) {
-  margin: 0 auto 20px auto;
- }
+  @media (max-width: 768px) {
+    font-size: 10px;
+  }
 }
 
 #see_less {
- color: #140460;
- text-align: center;
- font-size: 16px;
- font-style: normal;
- font-weight: 400;
- line-height: normal;
- cursor: pointer;
- margin: 0 0 0 780px;
- font-family: 'Poppins', sans-serif;
+  color: #140460;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  min-width: 20px;
+  margin-left: auto;
+  float: right;
+  margin-bottom: 20px;
 
- @media (max-width: 768px) {
-  margin: 0 0 0 280px;
-  font-size: 10px;
- }
+  @media (max-width: 768px) {
+    font-size: 10px;
+  }
 }
 
 .hide {
- display: none;
+  display: none;
 }
